--- a/index.html
+++ b/index.html
@@ -6,19 +6,16 @@
     <title>Сергиево-Посадский музей-заповедник</title>
     <meta name="description" content="Сергиево-Посадский музей-заповедник">
 
-    <!-- Шрифты -->
+    <!-- ШРИФТЫ -->
     <link rel="stylesheet" href="assets/css/fonts.css">
 
     <!-- Tailwind 4 CDN -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-    <!-- Alpine -->
-    <script src="https://unpkg.com/alpinejs" defer></script>
 </head>
 
 <body class="w-full max-w-[1600px] mx-auto bg-white text-[#24272A]">
 
-    <!-- JS-INCLUDE СЕКЦИИ -->
+    <!-- СЕКЦИИ, КОТОРЫЕ ВСТАВЛЯЕТ include.js -->
     <div data-include="tpl/header.html"></div>
     <div data-include="tpl/menu.html"></div>
     <div data-include="tpl/hero.html"></div>
@@ -33,8 +30,14 @@
     <div data-include="tpl/feedback-banner.html"></div>
     <div data-include="tpl/footer.html"></div>
 
-    <!-- JS include loader -->
+    <!-- СКРИПТ ПОДГРУЗКИ HTML-СЕКЦИЙ -->
     <script src="include.js"></script>
+
+    <!-- ЛОГИКА СЛАЙДЕРА (heroSlider) -->
+    <script src="assets/js/hero.js"></script>
+
+    <!-- ALPINE.JS ДОЛЖЕН ИДТИ САМЫМ ПОСЛЕДНИМ -->
+    <script src="https://unpkg.com/alpinejs" defer></script>
 
 </body>
 </html>
