--- a/tpl/hero.html
+++ b/tpl/hero.html
@@ -1,42 +1,92 @@
-<section class="w-full bg-[#D3423F] text-white overflow-hidden">
-  <div class="px-4 lg:px-16 py-10 lg:py-16 grid lg:grid-cols-2 gap-10 lg:gap-16 items-center">
+<section 
+    x-data="heroSlider()" 
+    class="relative w-full overflow-hidden bg-[#C93635] text-white">
 
-    <div>
-      <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold mb-5 lg:mb-6 leading-tight">
-        Русская<br>матрёшка
-      </h1>
+    <div class="relative w-full h-full">
 
-      <p class="text-base sm:text-lg opacity-90 mb-8">Коллекция XIX–XX веков</p>
+        <template x-for="(slide, index) in slides" :key="index">
+            <div 
+                x-show="current === index"
+                x-transition.opacity.duration.600ms
+                class="px-4 lg:px-16 py-6 lg:py-8 grid lg:grid-cols-2 gap-8 lg:gap-14 items-center min-h-[380px] lg:min-h-[440px]"
+            >
 
-      <div class="flex flex-wrap gap-5 items-end">
-        <div>
-          <label class="block text-xs uppercase tracking-wide opacity-80 mb-1">Корпус</label>
-          <select class="block bg-white text-black px-3 py-2 rounded text-sm min-w-[150px]">
-            <option>Все корпуса</option>
-            <option>Троицкий</option>
-            <option>Красногорский</option>
-            <option>Конный двор</option>
-          </select>
-        </div>
+                <!-- ЛЕВАЯ ЧАСТЬ -->
+                <div class="relative z-20">
+                    <div class="text-lg mb-3 opacity-80" x-text="slide.date"></div>
 
-        <div>
-          <label class="block text-xs uppercase tracking-wide opacity-80 mb-1">Дата</label>
-          <input type="date" class="block bg-white text-black px-3 py-2 rounded text-sm min-w-[150px]">
-        </div>
+                    <h1 class="text-4xl sm:text-6xl lg:text-[76px] font-bold leading-[0.9] mb-6">
+                        <span x-text="slide.titleLine1"></span><br>
+                        <span x-text="slide.titleLine2"></span>
+                    </h1>
 
-        <button class="bg-black text-white px-6 py-2.5 rounded text-sm font-semibold mt-1 hover:bg-[#111] transition">
-          Найти
+                    <p class="text-lg opacity-90 mb-8" x-text="slide.subtitle"></p>
+
+                    <div class="flex flex-wrap items-center gap-4">
+
+                        <button class="px-6 py-3 border border-white rounded-lg text-base font-semibold hover:bg-white hover:text-[#C93635] transition flex items-center gap-2">
+                            Купить билет 
+                            <img src="assets/svg/ticket.svg" class="w-4 h-4">
+                        </button>
+
+                        <button class="px-6 py-3 border border-white rounded-lg text-base font-semibold hover:bg-white hover:text-[#C93635] transition flex items-center gap-2">
+                            Постоянная выставка
+                            <span class="text-xl leading-3">→</span>
+                        </button>
+
+                    </div>
+                </div>
+
+                <!-- ПРАВАЯ ЧАСТЬ — МАТРЁШКА -->
+                <div class="relative flex justify-center lg:justify-end items-end">
+
+                    <!-- ФОНОВЫЙ КРУГ -->
+                    <div class="absolute rounded-full bg-[#D95B58] opacity-40 
+                                w-[600px] h-[600px] lg:w-[760px] lg:h-[760px]
+                                bottom-[-200px] right-[-120px]">
+                    </div>
+
+                    <!-- МАТРЁШКА -->
+                    <img 
+                        :src="slide.img"
+                        alt="Матрешка"
+                        class="relative z-10 
+                               max-h-[520px] sm:max-h-[620px] lg:max-h-[720px]
+                               object-contain
+                               translate-x-[60px] lg:translate-x-[90px]
+                               translate-y-[120px]"
+                    >
+                </div>
+
+            </div>
+        </template>
+
+    </div>
+
+    <!-- СТРЕЛКИ + ТОЧКИ -->
+    <div class="absolute bottom-6 flex items-center gap-4 left-4 lg:left-16 z-50">
+
+        <button 
+            class="w-10 h-10 flex items-center justify-center border border-white rounded hover:bg-white hover:text-[#C93635] transition"
+            @click="prev()">
+            ←
         </button>
-      </div>
-    </div>
 
-    <div class="flex justify-center lg:justify-end">
-      <img
-        src="../assets/img/hero-placeholder.jpg"
-        class="max-h-[360px] sm:max-h-[420px] lg:max-h-[460px] w-auto object-contain"
-        alt="Русская матрёшка"
-      >
-    </div>
+        <div class="flex items-center gap-2">
+            <template x-for="(slide, index) in slides">
+                <div 
+                    class="w-3 h-3 rounded-full border border-white cursor-pointer transition"
+                    :class="current === index ? 'bg-white' : 'bg-transparent'"
+                    @click="current = index">
+                </div>
+            </template>
+        </div>
 
-  </div>
+        <button 
+            class="w-10 h-10 flex items-center justify-center border border-white rounded hover:bg-white hover:text-[#C93635] transition"
+            @click="next()">
+            →
+        </button>
+
+    </div>
 </section>
