--- a/tpl/menu.html
+++ b/tpl/menu.html
@@ -1,12 +1,56 @@
-<section class="w-full border-b border-[#DCDEE0] hidden lg:block">
-  <nav class="flex flex-wrap items-center gap-6 px-6 py-4 text-sm font-medium text-[#24272A]">
-    <a href="#" class="hover:opacity-60 transition">О музее</a>
-    <a href="#" class="hover:opacity-60 transition">Выставки</a>
-    <a href="#" class="hover:opacity-60 transition">Коллекции</a>
-    <a href="#" class="hover:opacity-60 transition">Афиша</a>
-    <a href="#" class="hover:opacity-60 transition">Экскурсии</a>
-    <a href="#" class="hover:opacity-60 transition">Посетителям</a>
-    <a href="#" class="hover:opacity-60 transition">Образование</a>
-    <a href="#" class="hover:opacity-60 transition">Новости</a>
-  </nav>
-</section>
+<nav class="w-full border-b border-[#E5E5E5] bg-white" x-data="{ open: null }">
+    <div class="max-w-[1600px] mx-auto px-6 flex items-center justify-center gap-10 h-[60px]">
+
+        <!-- ПУНКТЫ МЕНЮ -->
+        <template x-for="(item, i) in [
+            { name: 'Корпуса', submenu: ['Главный корпус', 'Ризница Троице-Сергиевской Лавры', 'Музейный комплекс «Конный двор»', 'Краеведческий корпус'] },
+            { name: 'Интерактивная карта' },
+            { name: 'Для групп' },
+            { name: 'Посетителям' },
+            { name: 'Мероприятия' },
+            { name: 'Выставки и экспозиции' },
+            { name: 'Экскурсии' },
+            { name: 'О музее' },
+            { name: 'Контакты' }
+        ]" :key="i">
+
+            <div class="relative">
+
+                <!-- КНОПКА -->
+                <button
+                    @mouseenter="open = item.submenu ? i : null"
+                    @mouseleave="if(!item.submenu) open = null"
+                    class="px-3 py-2 text-[15px] font-medium transition"
+                    :class="open === i ? 'text-[#C93635]' : 'text-[#2A2A2A]'"
+                >
+                    <span x-text="item.name"></span>
+
+                    <!-- красная линия -->
+                    <div 
+                        x-show="open === i" 
+                        class="absolute left-0 right-0 -bottom-[1px] h-[3px] bg-[#C93635]">
+                    </div>
+                </button>
+
+                <!-- SUBMENU (DROP-DOWN) -->
+                <div 
+                    x-show="open === i && item.submenu"
+                    @mouseenter="open = i"
+                    @mouseleave="open = null"
+                    x-transition
+                    class="absolute top-full left-0 w-[260px] bg-white shadow-xl border border-gray-100 rounded-md p-4 space-y-2 z-50"
+                >
+                    <template x-for="sub in item.submenu" :key="sub">
+                        <a 
+                            href="#"
+                            class="block text-[15px] text-[#1A1A1A] hover:text-[#C93635] transition"
+                            x-text="sub"
+                        ></a>
+                    </template>
+                </div>
+
+            </div>
+
+        </template>
+    </div>
+</nav>
