--- a/tpl/afisha.html
+++ b/tpl/afisha.html
@@ -1,75 +1,167 @@
-<section class="w-full px-4 lg:px-16 py-12 lg:py-16 bg-[#F7F7F7]">
+<section class="w-full px-4 lg:px-[60px] py-14" x-data="{ activeDay: 5 }">
 
-  <div class="flex flex-col lg:flex-row lg:items-end justify-between mb-8 lg:mb-10 gap-6">
-    <h2 class="text-2xl sm:text-3xl lg:text-5xl font-bold text-[#24272A]">
-      Афиша
-    </h2>
+    <!-- Заголовок -->
+    <div class="flex items-center justify-between mb-10">
+        <h2 class="text-4xl font-semibold text-[#24272A]">Афиша</h2>
 
-    <!-- Календарь -->
-    <div class="flex flex-wrap items-center gap-3">
-      <button class="px-4 py-2 border border-[#24272A] rounded text-sm hover:bg-[#24272A] hover:text-white transition">
-        Сегодня
-      </button>
-      <input
-        type="date"
-        class="px-4 py-2 border border-[#24272A] rounded bg-white text-sm"
-      >
+        <a href="#"
+           class="flex items-center gap-2 border border-[#24272A] px-5 py-3 text-base font-semibold hover:bg-[#24272A] hover:text-white transition">
+            Все мероприятия →
+        </a>
     </div>
-  </div>
 
-  <!-- Карточки мероприятий -->
-  <div class="grid md:grid-cols-3 gap-6 lg:gap-10">
+    <!-- ДАТЫ (ТАБЫ) -->
+    <div class="w-full overflow-x-auto mb-12">
+        <div class="flex gap-4 min-w-max">
 
-    <!-- Событие -->
-    <a href="#" class="block bg-white rounded-xl overflow-hidden shadow hover:shadow-lg transition-shadow duration-300">
-      <div class="w-full h-[190px] sm:h-[210px] bg-gray-200">
-        <img src="../assets/img/event-1.jpg" class="w-full h-full object-cover" alt="">
-      </div>
-      <div class="p-5">
-        <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-1.5">Сегодня</div>
-        <h3 class="text-lg font-semibold mb-2">Обзорная экскурсия по музею</h3>
-        <p class="text-sm text-[#5B5D60] mb-4">
-          Подходит для всей семьи, продолжительность — 1,5 часа.
-        </p>
-        <button class="px-4 py-2 bg-[#24272A] text-white rounded text-sm">
-          Подробнее
-        </button>
-      </div>
-    </a>
+            <!-- TAB -->
+            <template x-for="day in [
+                {d:5, w:'пт'},
+                {d:6, w:'сб'},
+                {d:7, w:'вс'},
+                {d:8, w:'пн'},
+                {d:9, w:'вт'},
+                {d:10, w:'ср'},
+                {d:11, w:'чт'},
+                {d:12, w:'пт'},
+                {d:13, w:'сб'},
+                {d:14, w:'вс'},
+                {d:15, w:'пн'},
+                {d:16, w:'вт'}
+            ]">
 
-    <!-- Событие -->
-    <a href="#" class="block bg-white rounded-xl overflow-hidden shadow hover:shadow-lg transition-shadow duration-300">
-      <div class="w-full h-[190px] sm:h-[210px] bg-gray-200">
-        <img src="../assets/img/event-2.jpg" class="w-full h-full object-cover" alt="">
-      </div>
-      <div class="p-5">
-        <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-1.5">18 мая</div>
-        <h3 class="text-lg font-semibold mb-2">Ночь музеев</h3>
-        <p class="text-sm text-[#5B5D60] mb-4">
-          Специальная программа с лекциями и перформансами.
-        </p>
-        <button class="px-4 py-2 bg-[#24272A] text-white rounded text-sm">
-          Подробнее
-        </button>
-      </div>
-    </a>
+                <button
+                    @click="activeDay = day.d"
+                    class="w-[72px] h-[88px] rounded-t-full flex flex-col items-center justify-center transition border"
+                    :class="activeDay === day.d
+                        ? 'bg-[#C93635] text-white border-[#C93635]'
+                        : 'bg-[#F0F1F2] text-[#24272A] border-transparent hover:bg-[#E6E7E9]'"
+                >
+                    <div class="text-2xl font-semibold" x-text="day.d"></div>
+                    <div class="text-sm opacity-80" x-text="day.w"></div>
+                </button>
 
-    <!-- Событие -->
-    <a href="#" class="block bg-white rounded-xl overflow-hidden shadow hover:shadow-lg transition-shadow duration-300">
-      <div class="w-full h-[190px] sm:h-[210px] bg-gray-200">
-        <img src="../assets/img/event-3.jpg" class="w-full h-full object-cover" alt="">
-      </div>
-      <div class="p-5">
-        <div class="text-xs uppercase tracking-wide text-[#D3423F] font-semibold mb-1.5">22 мая</div>
-        <h3 class="text-lg font-semibold mb-2">Лекция по истории Сергиева Посада</h3>
-        <p class="text-sm text-[#5B5D60] mb-4">
-          Авторская программа для интересующихся историей.
-        </p>
-        <button class="px-4 py-2 bg-[#24272A] text-white rounded text-sm">
-          Подробнее
-        </button>
-      </div>
-    </a>
+            </template>
+        </div>
+    </div>
 
-  </div>
+    <!-- КАРТОЧКИ -->
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+
+        <!-- CARD -->
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-1.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                01.09.2025 – 31.05.2026
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Музей: ученикам, учителям, родителям
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4 bg-[#C93635]">
+                <img src="/assets/img/afisha-2.jpg"
+                     class="w-full h-[200px] object-contain group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                27.10.2025 – 31.05.2026
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Детский музейный центр «Матрёшка»
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-3.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                28.10.2025 – 17.05.2026
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Клуб «Юный археолог». 2025–2026
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-4.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                28.11.2025 – 31.12.2025
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Экскурсии в декабре 2025
+            </h3>
+        </article>
+
+        <!-- второй ряд -->
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-5.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                28.11.2025 – 03.01.2026
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Ёлка в музее
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-6.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                28.11.2025 – 26.12.2025
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Новый год с Музеем
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-7.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                03.12.2025 – 10.12.2025
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Лекция «Троицкий собор и рака прп. Сергия Радонежского»
+            </h3>
+        </article>
+
+        <article class="group cursor-pointer">
+            <div class="rounded-t-[120px] overflow-hidden mb-4">
+                <img src="/assets/img/afisha-8.jpg"
+                     class="w-full h-[200px] object-cover group-hover:scale-105 transition duration-500"
+                     alt="">
+            </div>
+            <div class="text-sm text-[#8B8E91] mb-2">
+                04.12.2025 – 18.12.2025
+            </div>
+            <h3 class="text-lg font-semibold text-[#24272A]">
+                Лекция «Секреты древнего стекла»
+            </h3>
+        </article>
+
+    </div>
+
 </section>
